download links from cdn

--- a/docs/pages/enroll-resources/relay/relay.mdx
+++ b/docs/pages/enroll-resources/relay/relay.mdx
@@ -7,6 +7,59 @@ description: How to deploy and use a Teleport Relay service
 
 This page refers to an unreleased Teleport feature and is thus subject to change. The following documentation applies to version `v18.1.2-dev.relay.2`.
 
+<details>
+<summary>Download links</summary>
+https://cdn.cloud.gravitational.io/teleport-18.1.2-dev.relay.2-1.arm64.rpm
+https://cdn.cloud.gravitational.io/teleport-18.1.2-dev.relay.2-1.arm.rpm
+https://cdn.cloud.gravitational.io/teleport-18.1.2-dev.relay.2-1.i386.rpm
+https://cdn.cloud.gravitational.io/teleport-18.1.2-dev.relay.2-1.x86_64.rpm
+https://cdn.cloud.gravitational.io/teleport_18.1.2-dev.relay.2_amd64.deb
+https://cdn.cloud.gravitational.io/teleport_18.1.2-dev.relay.2_arm64.deb
+https://cdn.cloud.gravitational.io/teleport_18.1.2-dev.relay.2_arm.deb
+https://cdn.cloud.gravitational.io/teleport_18.1.2-dev.relay.2_i386.deb
+https://cdn.cloud.gravitational.io/teleport-18.1.2-dev.relay.2.pkg
+https://cdn.cloud.gravitational.io/teleport-access-datadog-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-datadog-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-discord-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-discord-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-email-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-email-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-jira-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-jira-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-mattermost-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-mattermost-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-msteams-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-msteams-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-pagerduty-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-pagerduty-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-slack-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-access-slack-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-connect_18.1.2-dev.relay.2_amd64.deb
+https://cdn.cloud.gravitational.io/Teleport%20Connect-18.1.2-dev.relay.2.dmg
+https://cdn.cloud.gravitational.io/teleport-connect-18.1.2-dev.relay.2-x64.tar.gz
+https://cdn.cloud.gravitational.io/teleport-connect-18.1.2-dev.relay.2.x86_64.rpm
+https://cdn.cloud.gravitational.io/Teleport%20Connect%20Setup-18.1.2-dev.relay.2.exe
+https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-darwin-universal-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-linux-386-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-linux-amd64-centos7-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-linux-arm-bin.tar.gz
+https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-windows-amd64-bin.zip
+https://cdn.cloud.gravitational.io/teleport-windows-auth-setup-v18.1.2-dev.relay.2-amd64.exe
+https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz
+https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-darwin-universal-bin.tar.gz
+https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
+https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+</details>
+
 </Admonition>
 
 A Relay service group consists of one or more Teleport instances configured to run the Relay service with the same relay group name, all accessible behind the same load balancer. The Relay service uses two endpoints, one for "transport" access used by clients for the SSH transport and, in the future, for Kubernetes access forwarding, and one for "tunnel" access used by agents to fetch the relay group configuration and to run reverse tunnels. Both of those ports should be accessible through a load balancer that forwards connections to all the agents in the same Relay group. The Relay service instances connect to each other for the purpose of forwarding connections over the internal "peer" port.
