--- a/docs/pages/enroll-resources/relay/relay.mdx
+++ b/docs/pages/enroll-resources/relay/relay.mdx
@@ -9,55 +9,28 @@ This page refers to an unreleased Teleport feature and is thus subject to change
 
 <details>
 <summary>Download links</summary>
-https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.arm64.rpm
-https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.arm.rpm
-https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.i386.rpm
-https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.x86_64.rpm
-https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_amd64.deb
-https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_arm64.deb
-https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_arm.deb
-https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_i386.deb
-https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2.pkg
-https://cdn.cloud.gravitational.io/teleport-access-datadog-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-datadog-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-discord-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-discord-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-email-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-email-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-jira-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-jira-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-mattermost-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-mattermost-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-msteams-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-msteams-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-pagerduty-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-pagerduty-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-slack-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-access-slack-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-connect_18.1.2-dev.relay.2_amd64.deb
-https://cdn.cloud.gravitational.io/Teleport%20Connect-18.1.2-dev.relay.2.dmg
-https://cdn.cloud.gravitational.io/teleport-connect-18.1.2-dev.relay.2-x64.tar.gz
-https://cdn.cloud.gravitational.io/teleport-connect-18.1.2-dev.relay.2.x86_64.rpm
-https://cdn.cloud.gravitational.io/Teleport%20Connect%20Setup-18.1.2-dev.relay.2.exe
-https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-event-handler-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-universal-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-386-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-amd64-centos7-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-arm-bin.tar.gz
-https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-windows-amd64-bin.zip
-https://cdn.cloud.gravitational.io/teleport-windows-auth-setup-v18.1.2-dev.relay.2-amd64.exe
-https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz
-https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-darwin-universal-bin.tar.gz
-https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz
-https://cdn.cloud.gravitational.io/terraform-provider-teleport-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz
+- [Linux ARM64/ARMv8 (64-bit) RPM](https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.arm64.rpm)
+- [Linux ARMv7 (32-bit) RPM](https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.arm.rpm)
+- [Linux 32-bit RPM](https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.i386.rpm)
+- [Linux 64-bit RPM](https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2-1.x86_64.rpm)
+- [Linux 64-bit DEB](https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_amd64.deb)
+- [Linux ARM64/ARMv8 (64-bit) DEB](https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_arm64.deb)
+- [Linux ARMv7 (32-bit) DEB](https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_arm.deb)
+- [Linux 32-bit DEB](https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_i386.deb)
+- [MacOS Universal .pkg installer](https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2.pkg)
+- [Teleport Connect 64-bit DEB](https://cdn.cloud.gravitational.io/teleport-ent-connect_18.1.2-dev.relay.2_amd64.deb)
+- [Teleport Connect](https://cdn.cloud.gravitational.io/Teleport%20Connect-18.1.2-dev.relay.2.dmg)
+- [Teleport Connect 64-bit](https://cdn.cloud.gravitational.io/teleport-ent-connect-18.1.2-dev.relay.2-x64.tar.gz)
+- [Teleport Connect 64-bit RPM](https://cdn.cloud.gravitational.io/teleport-ent-connect-18.1.2-dev.relay.2.x86_64.rpm)
+- [Teleport Connect](https://cdn.cloud.gravitational.io/Teleport%20Connect%20Setup-18.1.2-dev.relay.2.exe)
+- [MacOS Intel](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz)
+- [MacOS ARM](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz)
+- [MacOS Universal](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-universal-bin.tar.gz)
+- [Linux 32-bit](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-386-bin.tar.gz)
+- [Linux 64-bit](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz)
+- [Linux 64-bit (RHEL/CentOS 7.x compatible)](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-amd64-centos7-bin.tar.gz)
+- [Linux ARM64/ARMv8 (64-bit)](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-arm64-bin.tar.gz)
+- [Linux ARMv7 (32-bit)](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-arm-bin.tar.gz)
 </details>
 
 </Admonition>
