fix connect linux links

--- a/docs/pages/enroll-resources/relay/relay.mdx
+++ b/docs/pages/enroll-resources/relay/relay.mdx
@@ -18,10 +18,10 @@ This page refers to an unreleased Teleport feature and is thus subject to change
 - [Linux ARMv7 (32-bit) DEB](https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_arm.deb)
 - [Linux 32-bit DEB](https://cdn.cloud.gravitational.io/teleport-ent_18.1.2-dev.relay.2_i386.deb)
 - [MacOS Universal .pkg installer](https://cdn.cloud.gravitational.io/teleport-ent-18.1.2-dev.relay.2.pkg)
-- [Teleport Connect 64-bit DEB](https://cdn.cloud.gravitational.io/teleport-ent-connect_18.1.2-dev.relay.2_amd64.deb)
+- [Teleport Connect 64-bit DEB](https://cdn.cloud.gravitational.io/teleport-connect_18.1.2-dev.relay.2_amd64.deb)
 - [Teleport Connect](https://cdn.cloud.gravitational.io/Teleport%20Connect-18.1.2-dev.relay.2.dmg)
-- [Teleport Connect 64-bit](https://cdn.cloud.gravitational.io/teleport-ent-connect-18.1.2-dev.relay.2-x64.tar.gz)
-- [Teleport Connect 64-bit RPM](https://cdn.cloud.gravitational.io/teleport-ent-connect-18.1.2-dev.relay.2.x86_64.rpm)
+- [Teleport Connect 64-bit](https://cdn.cloud.gravitational.io/teleport-connect-18.1.2-dev.relay.2-x64.tar.gz)
+- [Teleport Connect 64-bit RPM](https://cdn.cloud.gravitational.io/teleport-connect-18.1.2-dev.relay.2.x86_64.rpm)
 - [Teleport Connect](https://cdn.cloud.gravitational.io/Teleport%20Connect%20Setup-18.1.2-dev.relay.2.exe)
 - [MacOS Intel](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz)
 - [MacOS ARM](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz)
