add windows link

--- a/docs/pages/enroll-resources/relay/relay.mdx
+++ b/docs/pages/enroll-resources/relay/relay.mdx
@@ -26,6 +26,7 @@ This page refers to an unreleased Teleport feature and is thus subject to change
 - [MacOS Intel](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-amd64-bin.tar.gz)
 - [MacOS ARM](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-arm64-bin.tar.gz)
 - [MacOS Universal](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-darwin-universal-bin.tar.gz)
+- [Windows (64-bit)](https://cdn.cloud.gravitational.io/teleport-v18.1.2-dev.relay.2-windows-amd64-bin.zip)
 - [Linux 32-bit](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-386-bin.tar.gz)
 - [Linux 64-bit](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-amd64-bin.tar.gz)
 - [Linux 64-bit (RHEL/CentOS 7.x compatible)](https://cdn.cloud.gravitational.io/teleport-ent-v18.1.2-dev.relay.2-linux-amd64-centos7-bin.tar.gz)
