--- a/docs/pages/connect-your-client/introduction.mdx
+++ b/docs/pages/connect-your-client/introduction.mdx
@@ -313,14 +313,14 @@ initiate a CLI connection inside Teleport Connect:
 </TabItem>
 <TabItem label="Web UI">
 
-Starting from version `17.1`, users can establish database sessions using the
-Teleport Web UI. Currently, it is supported in PostgreSQL databases. 
+The Teleport Web UI will show all databases a user has access to and only offers
+browser-based sessions for a select number of databases. For databases
+that can't be accessed from the browser, the Web UI will show the `tsh` commands
+that are needed to connect from a developer workstation.
 
-![New database session connect dialog with custom values](../../img/connect-your-client/webui-db-sessions/connect-dialog-custom.png)
-
-For other databases the Teleport Web UI will list those that are accessible
-to your user under **Databases** and provide `tsh` commands to connect from
-your local terminal environment.
+For more details on accessing databases directly from the browser, refer to
+[Starting a database session](./web-ui.mdx#starting-a-database-session) in 
+the Teleport Web UI.
 
 </TabItem>
 </Tabs>
