Respond to feedback
- Indicate that Teleport Enterprise is required to create Access
  Requests in the Web UI.
- Mention Teleport Connect.
- Mention `kube_resource`.

--- a/docs/pages/connect-your-client/request-access.mdx
+++ b/docs/pages/connect-your-client/request-access.mdx
@@ -11,9 +11,14 @@ This guide explains you how to use `tsh` to create Teleport Access Requests.
 
 <Admonition type="tip">
 
-It is possible to create Access Requests in the Teleport Web UI by navigating
-from the left sidebar to **Identity Governance > Access Requests > New
-Request**.
+In Teleport Enterprise accounts with Identity Governance enabled, it is possible
+to create Access Requests in the Teleport Web UI and Teleport Connect.
+
+Access Requests can also be created in the Teleport Web UI and Teleport Connect.
+In the Teleport Web UI, navigate from the left sidebar to **Identity Governance > 
+Access Requests > New Request**. In Teleport Connect, either open a new tab
+with cluster resources by clicking on the new tab button or click the **Access
+Requests** button in the top right.
 
 </Admonition>
 
@@ -55,6 +60,7 @@ navigating to **Resources** in the sidebar.
 
    - `node`
    - `kube_cluster`
+   - `kube_resource`
    - `db`
    - `app`
    - `windows_desktop`
