Update autogenerated docs

--- a/docs/pages/reference/operator-resources/resources-teleport-dev-provisiontokens.mdx
+++ b/docs/pages/reference/operator-resources/resources-teleport-dev-provisiontokens.mdx
@@ -230,6 +230,7 @@ resource, which you can apply after installing the Teleport Kubernetes operator.
 
 |Field|Type|Description|
 |---|---|---|
+|insecure_allow_http_issuer|boolean||
 |issuer|string||
 
 ### spec.kubernetes.static_jwks
