Add version to title when multi-cluster support is available

--- a/docs/pages/upgrading/client-tools-managed-updates.mdx
+++ b/docs/pages/upgrading/client-tools-managed-updates.mdx
@@ -47,7 +47,7 @@ Allows mirroring the CDN in a private network or using custom builds.
 Only one process can acquire the lock to update client tools, while other processes wait for the lock to be released.
 If the first process cancels the update, the next process in line will initiate the update.
 
-### Multi-cluster support and multi-version caching
+### Multi-cluster support and multi-version caching (v17.6.0+)
 
 Client tools managed updates support multi-cluster environments. When you log in to different clusters that use
 different versions (including different major versions), the client makes a request to the `/v1/webapi/find` endpoint
